Fixing a bug for caption on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,10 @@ nav ul a.active {
   padding: 50px;
   top: 0 !important;
   text-shadow: 0px 2px 2px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .caption h3,
@@ -79,6 +83,7 @@ nav ul a.active {
 
 .caption a,
 .caption button {
+  margin-top: 30px;
   text-shadow: 0px 2px 2px black;
 }
 
@@ -327,10 +332,6 @@ nav ul a.active {
     width: 100% !important;
     left: 0 !important;
     text-align: center;
-  }
-
-  .caption h3 {
-    padding-top: 2.5em;
   }
 }
 
